--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,12 @@
+--changes 1.3 RC2
+#fixed Rails production environment problem
+#added crossdomain.xml file to rails installer, now copies crossdomain to rails/public.
+#fixed RemoteObject fault handler executions for AsyncTokens.
+#took out two return statements in BatchFilter, as it should continue through the batch process.
+#fixed lighttpd gateway, was not working in 1.2/1.3RC1.
+#re-wrote the rails plugin again. Now has full controller support, and does not fuck with production enviornment.
+#util/action_controller_run_target no longer valid, see util/active_record, and util/action_controller.
+
 --changes 1.3 RC1
 #rewrote rubyamf_core/adapters/active_record_adapter.rb to be recursive. Now handles VO mapping, and associated models when using :include
 #rewrote rubyamf_core/app/rails_gateway.rb. It now extends the normal gateway and just changes out the actions
@@ -5,7 +14,7 @@
 #added a fix in core/io/read_write.rb for a case when Rails would truncate the last \000 byte from AMF data. That was in Rails' ActionPack gem ActionController -> raw_post_data_fix.rb
 #Added @is_rubyamf to controllers.
 #added VoUtil class
-#added "single!" and "single?" helper to active record. See wiki.rubyamf.org/wiki/show/ActiveRecordSingles for more information about this
+#added "as_single!", "single!" and "single?" helper to active record. See wiki.rubyamf.org/wiki/show/ActiveRecordSingles for more information about this
 #added util/active_record.rb. This implementes the single! method and single? method (single? is used internally to RubyAMF) See wiki.rubyamf.org/wiki/show/ActiveRecordSingles for more information about this
 #added util/openstruct.rb. #This is a fix for Object#id problems
 #added util/object.rb #this is a fix for Object#id problems
@@ -22,7 +31,6 @@
 --#added active record error handling, return an active record with errors and it sends back the first error in the errors hash as a string (EX: "login already taken")
 --#thread safety
 --#re-wrote rails plugin as to not break everything when in production environment
---#fixed lighttpd gateway, missed that in the 1.2 release
 
 --changes 1.2
 ####RAILS
