--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,9 +3,9 @@
 #added crossdomain.xml file to rails installer, now copies crossdomain to rails/public.
 #fixed RemoteObject fault handler executions for AsyncTokens.
 #took out two return statements in BatchFilter, as it should continue through the batch process.
-#fixed lighttpd gateway, was not working in 1.2/1.3RC1.
-#re-wrote the rails plugin again. Now has full controller support, and does not fuck with production enviornment.
+#re-wrote the rails plugin again. Now has full controller support, and does not harm with production enviornment.
 #util/action_controller_run_target no longer valid, see util/active_record, and util/action_controller.
+#changed the "inner" ActionController requests HTTP_ACCEPT header to accept application/x-amf, to enable the respond_to method to work properly
 
 --changes 1.3 RC1
 #rewrote rubyamf_core/adapters/active_record_adapter.rb to be recursive. Now handles VO mapping, and associated models when using :include
