--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,12 @@
+--changes 1.3 RC2 revision 766
+#added in FaultObject handling when sending back FaultObjects from Controller's, it had been stripped out when rewriting the rails plugin.
+#changed service.is_amf / service.is_rubyamf to false after the service call to rails controller
+#gzip works now, strange as I didn't change anything specifically for it
+--added parameter mappings
+
 --changes 1.3 RC2
 #fixed Rails production environment problem
+#full controller support
 #added crossdomain.xml file to rails installer, now copies crossdomain to rails/public.
 #fixed RemoteObject fault handler executions for AsyncTokens.
 #took out two return statements in BatchFilter, as it should continue through the batch process.
