--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,10 +1,9 @@
 --changes 1.3 RC2 revision 766
-#added in FaultObject handling when sending back FaultObjects from Controller's, it had been stripped out when rewriting the rails plugin.
-#changed service.is_amf / service.is_rubyamf to false after the service call to rails controller
+#Added in FaultObject handling when sending back FaultObjects from Controller's, it had been stripped out when rewriting the rails plugin.
+#changed service.is_amf / service.is_rubyamf to 'false' after the service call to rails controller
 #gzip works now, strange as I didn't change anything specifically for it
 #split vo / adapter configs into two files, now the configs live in rails/config/rubyamf. For LITE, the configs are now in rubyamf/services/config/
-#added ValueObjects.rails_parameter_mapping_type, to specify what get's put into params[:[voclass]]
---added parameter mappings
+#added ValueObjects.rails_parameter_mapping_type, to specify what get's put into params[:[voclass]]. Read the vo_config file fore more information
 
 --changes 1.3 RC2
 #fixed Rails production environment problem
