--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,7 @@
---changes 1.3 Final
+--changes 1.3 revision 754
 #Fixed bug when taking incoming VO's and mapping them to AR. I wasn't dealing with an :incoming class path (such as vo.Task). Now I strip off the class path and just use the class. (Task.downcase). This was causing the VO to be put in params['vo.Task']. Dah.
+#Fixed slight problem with incoming VO's and nil associated model data. If an incoming associated model was nil it was automatically becoming an Array. It's handled a little more graceful with ActiveRecord reflections to find out what an incoming nil members real value should be (Array / nil). If :has_many, val == []. If :belongs_to, val == nil, if :has_and_belongs_to_many, val = []
+#created_at and updated_at now work correctly according to ActiveRecord, because of the above bug fix.
 
 --changes 1.3 RC2 revision 742
 #Added in FaultObject handling when sending back FaultObjects from Controller's, it had been stripped out when rewriting the rails plugin.
