--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+--changes 1.3 FINAL
+#added more logic for incoming nil/undefined/empty associated active_record model data. Was a few cases when it wouldn't work correctly (see util/active_record#update_nil_associations)
+#add util/active_record#update_nans which updates any hash values that are NaN, turns them into nil
+#updated AS3FaultObject, no regex was needed in it anymore
+
+
 --changes 1.3 revision 756
 #Fixed bug when taking incoming VO's and mapping them to AR. I wasn't dealing with an :incoming class path (such as vo.Task). Now I strip off the class path and just use the class. (Task.downcase). This was causing the VO to be put in params['vo.Task']. Dah.
 #Fixed slight problem with incoming VO's and nil associated model data. If an incoming associated model was nil it was automatically becoming an Array. It's handled a little more graceful with ActiveRecord reflections to find out what an incoming nil members real value should be (Array / nil). If :has_many, val == []. If :belongs_to, val == nil, if :has_and_belongs_to_many, val = []
