--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+--changes 1.3.2
+#added some better logic for incoming VO -> params[:] mapping. Now the first incoming VO properties get merged into the params hash. Thus params[:id] will work. (enabling update,edit,destroy scaffolding methods)
+#added rescue_action in the rubyamf_controller, to rescue a few cases where exceptions couldn't be returned back to the player. This fixes that and all exceptions are now returned to the player.
+#took out ValueObjects.rails_parameter_mapping_type. It is always 'update_hash', not really needed anymore.
+#changed recordset_format default to be FL9
+
+
 --changes 1.3.1
 #added Adapters.deep_adaptations See an adapters_config file for more information.
 
@@ -5,7 +12,6 @@
 #added more logic for incoming nil/undefined/empty associated active_record model data. Was a few cases when it wouldn't work correctly (see util/active_record#update_nil_associations)
 #add util/active_record#update_nans which updates any hash values that are NaN, turns them into nil
 #updated AS3FaultObject, no regex was needed in it anymore
-
 
 --changes 1.3 revision 756
 #Fixed bug when taking incoming VO's and mapping them to AR. I wasn't dealing with an :incoming class path (such as vo.Task). Now I strip off the class path and just use the class. (Task.downcase). This was causing the VO to be put in params['vo.Task']. Dah.
