--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+--changes 1.3.2a
+#put a fix in VoUtil to handle incoming "update VO", if the created_at or updated_at is nil it's not updated.
+
 --changes 1.3.2
 #added AMF0 / AMF3 NaN support ("NaN" constant in ruby)
 #added AMF3 Infinity support ("Infinity" constant in ruby)
