--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+--changes
+1.3.2b
+#Updated VoUtil again for incoming VO's. If any properties are nil, they're now deleted out of the open struct so that the resulting update hash for active record doesn't put in NULL into the database.
+
 --changes 1.3.2a
 #put a fix in VoUtil to handle incoming "update VO", if the created_at or updated_at is nil it's not updated.
 
