--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+--changes 1.3.3a
+#gook out references to amf_id in serializer
+#reverted a condition in the util/action_controller that was breaking new/create/edit/update action controller methods, after a remoting call had been made
+#
+
 --changes 1.3.3
 #updated the ActiveRecord::Base.update_nil_associations method. Added the 3rd open struct param. Which takes the original incoming ValueObject, and set's any similar associated model properties to the same values that are being assigned to the hash association properties. This was causing an issue with some models, not all. Not sure what the qualifications were for this being an issue, but it's fixed.
 #fixed incoming AMF stream object references when reading Objects.
