--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+--changes 1.3.3b
+#updated rails parameter mapping for sending generic objects from flash/flex
+
 --changes 1.3.3a
 #gook out references to amf_id in serializer
 #reverted a condition in the util/action_controller that was breaking new/create/edit/update action controller methods, after a remoting call had been made
