--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,14 @@
 --changes 1.3.4
 #single mysql records are always returned as an object, not wrapped in an array anymore.
 #fixed small bug with incoming VO names. EI this wouldn't work: ValueObjects.regier({:incoming=>'vo.SectionVO',:map_to=>'Section',:outgoing=>'vo.SectionVO'})
-
+#added case translations for value objects. You can translate incoming lowerCamelCase to snake_case, and outgoing snake_case to lowerCamelCase
+#added setRemoteCredentials support.
+#added "credentials" method to ActionController::Base. Now if you set credentials with "setRemoteCredentials" or "setCredentials" for AMF0/3 / RemoteObject, it will send back a hash with {username:'username',password:'mypassword'}
+#fixed issue with returned value objects that had :belongs_to association, it now correctly returns an object, not wrapped in any array anymore.
+#changed read_write so it doesnt crash in production when setCredentials is set. When in production mode the exception message was different in different modes.
+#fixed debug player issues. It correlates to the rails modes. An error that was happening while reading integers was raising errors, but the message was different per mode, so a regex I was using to sniff it was not catching it in production mode.
+#added initial :through support
+#added magic_field ignorance. Incoming VO's magic field members are ignored.
 --changes 1.3.3b
 #updated rails parameter mapping for sending generic objects from flash/flex
 
