fixed issue where associations in cyclic object graphs were deserialized to Hashes instead of ActiveRecords.
The problem occurred within read_amf3_object() because @stored_objects referenced deserialized items before they are converted from Hashes to ActiveRecords at the end of the method.  Consequently, when a cyclic object graph is deserialized, recursive calls from read_amf3_object() between the conversion will see the Hash in @stored_objects.

The solution splits up VoUtil.get_vo_for_incoming() into three functions:
VoUtil.get_ruby_class()
VoUtil.set_value()
VoUtil.finalize_object()

This allows us to create an ActiveRecord from the start, and avoid the need to store a temporary Hash in @stored_objects.

--- a/rubyamf/CHANGELOG
+++ b/rubyamf/CHANGELOG
@@ -1,3 +1,5 @@
+--changes 1.6.5
+* fixed issue where associations in cyclic object graphs were deserialized to Hashes instead of ActiveRecords.
 --changes 1.6.4
 * FaultObject now takes an optional second argument, which is any object you want to send back with the fault. This object is accessible on the Flex side in the returned FaultEvent - faultEvent.message['extendedData'] as a typed object.
 * changed serializer to store and look up object references with a hash instead of an array. Nice speed improvement to serialization
