--- a/rubyamf/CHANGELOG
+++ b/rubyamf/CHANGELOG
@@ -1,5 +1,6 @@
 --changes 1.6.5
 * fixed issue where associations in cyclic object graphs were deserialized to Hashes instead of ActiveRecords.
+* fixed issue when specifying actionscript object properties/values to map to active record methods/parameters using "ClassMappings.register(:methods =>". Previously this worked when sending active record objects from rails to flex, but not when sending actionscript objects from flex to rails.
 --changes 1.6.4
 * FaultObject now takes an optional second argument, which is any object you want to send back with the fault. This object is accessible on the Flex side in the returned FaultEvent - faultEvent.message['extendedData'] as a typed object.
 * changed serializer to store and look up object references with a hash instead of an array. Nice speed improvement to serialization
